Comment: CSS, HTML 주석 추가

--- a/resource/css/worldcup.css
+++ b/resource/css/worldcup.css
@@ -1,3 +1,4 @@
+/* 카드 포함 영역 */
 .card-container {
   display: flex;
   justify-content: center;
@@ -5,31 +6,30 @@
   margin-top: 20px;
   flex-wrap: wrap;
 }
+/* 카드 */
 .card {
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   width: 45%;
   height: 55vh;
   cursor: pointer;
 }
+/* 카드 호버링 */
 .card:hover {
   transform: scale(1.05);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
+/* 카드 안에 들어가는 내용 */
 .card-body {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+/* 카드 글자 */
 .card-title {
   font-size: 3vh;
 }
-iframe {
-  width: 100%;
-  height: 60vh;
-}
-.navbar-custom {
-  background-color: #90ee90 !important;
-}
+
+/* 라운드 정보 */
 .round-info {
   text-align: center;
   font-size: 3.5vh;
@@ -37,6 +37,8 @@ iframe {
   margin: 20px 0;
   margin-bottom: 50px;
 }
+
+/* 제목 */
 .title-text {
   text-align: center;
   font-size: 6vh;
